update home logo and css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img alt="logo" src="assets/img/logo.png" height="30">
+                    <img alt="logo" src="assets/img/logo.svg" height="30">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -62,7 +62,7 @@
                             Online Distribution
                         </h1>
                         <p class="home__description">
-                            At Rabando, we’re reimagining how to make the world’s most-loved products accessible to everyone.
+                            We bring products people love to the world & At Rabando, we’re reimagining how to make the world’s most-loved products accessible to everyone.
                         </p>
                         <a href="#" class="button--link button--flex">
                             Explore Rabando <i class="ri-arrow-right-down-line button__icon"></i>
@@ -84,7 +84,7 @@
                         </h2>
 
                         <p class="about__description">
-                            At Thrasio, we’re reimagining how to make the world’s most-loved products accessible to everyone. So we work with successful sellers, using a deep understanding of rankings, ratings, and reviews – plus supply chain and marketing smarts – to transform the art and science of commerce.
+                            At Rabando, we’re reimagining how to make the world’s most-loved products accessible to everyone. So we work with successful sellers, using a deep understanding of rankings, ratings, and reviews – plus supply chain and marketing smarts – to transform the art and science of commerce.
                         </p>
 
                         <a href="#" class="button--link button--flex">
