update home footer

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Thrasio. All rigths reserved</p>
+            <p class="footer__copy">&#169; Rabando. All rigths reserved</p>
         </footer>
         
         <!--=============== SCROLL UP ===============-->
