--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">
+                <a href="index.html" class="nav__logo">
                     <img alt="logo" src="assets/img/logo.svg" height="30">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">Customer</a>
+                            <a href="#" class="nav__link">Customer</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#about" class="nav__link">Product</a>
+                            <a href="#" class="nav__link">Product</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#products" class="nav__link">Company</a>
+                            <a href="about.html" class="nav__link">Company</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#products" class="nav__link">ID</a>
+                            <a href="#" class="nav__link">ID</a>
                         </li>
                     </ul>
 
@@ -164,9 +164,9 @@
             <!--==================== testimony ====================-->
             <section class="cta section container">
                 <div class="cta__bg">
-                    <h2 class="section__title-center">
+                    <h1 class="section__title-center">
                         Let’s Make Something Great
-                    </h2>
+                    </h1>
 
                     <p class="section__description">
                         If you’re looking to sell your Amazon business, we’re excited to work together.
