--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!--==================== HOME ====================-->
             <section class="home" id="home">
                 <div class="home__container container grid">
-                    <div>
+                    <div class="home__content-img">
                         <img src="assets/img/str_prd_warehouse.jpg" alt="" class="home__img">
                     </div>
                     <div class="home__data">
