--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
         <meta name="author" content="rabando">
-        <link rel="icon" href="assets/img/fav.png">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
         <title>Rabando Group</title>
     </head>
     <body>
@@ -24,7 +24,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="index.html" class="nav__logo">
-                    <img alt="logo" src="assets/img/logo.svg" height="30">
+                    <img alt="logo" src="assets/img/logo.png" height="30">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
