--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
         <meta name="author" content="rabando">
-        <link rel="icon" href="assets/img/fav.png">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
         <title>Rabando Group</title>
     </head>
     <body>
@@ -24,7 +24,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="index.html" class="nav__logo">
-                    <img alt="logo" src="assets/img/logo.svg" height="30">
+                    <img alt="logo" src="assets/img/logo.png" height="30">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -106,7 +106,7 @@
                         <div class="swiper-wrapper">
                             <div class="testimony__container grid swiper-slide">
                                 <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
-                                    <img src="https://i.pravatar.cc/150?img=68" class="testimony__photo">
+                                    <img avatar="John Doe" class="testimony__photo">
                                     <div class="testimony__card-description">
                                         <div class="testimony__card-name">John Doe</div>
                                         Lorem ipsum dolor consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Ut enim ad minim veniam.
@@ -115,9 +115,9 @@
                             </div>
                             <div class="testimony__container grid swiper-slide">
                                 <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
-                                    <img src="https://i.pravatar.cc/150?img=5" class="testimony__photo">
+                                    <img avatar="Anastasia Crowther" class="testimony__photo">
                                     <div class="testimony__card-description">
-                                        <div class="testimony__card-name">Jane Doe</div>
+                                        <div class="testimony__card-name">Anastasia Crowther</div>
                                         Lorem ipsum dolor consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Ut enim ad minim veniam.
                                     </div>
                                 </div>
