--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <p style="color: var(--title-color);">On average, our top brands have more than doubled their revenue every year since joining Thrasio</p>
                         </div>
                         <div class="grid-block__item--first-column grid-col col-4-1">
-                            <span style="color: var(--title-color);">2X</span>
+                            <span style="color: var(--container-color);">2X</span>
                         </div>
                     </div>
                     <div class="grid-block__item  grid-big-block size-small type-column col-5">
