--- a/customer.html
+++ b/customer.html
@@ -57,18 +57,36 @@
         </header>
 
         <main class="main pages">
-            <section class="page__header container">
+            <section class="main__header-page">
                 <h1 class="section__title">
-                    About Us
+                    HOW WE GROW BRANDS
                 </h1>
-
-                <p class="section__description"></p>
+                <div class="section__img-large">
+                    <img src="assets/img/customer-rabando.png" height="500">
+                </div>
             </section>
             <!--==================== ABOUT ====================-->
-            <section class="about__page container">
-                <a href="#" class="button--link button--flex">
-                    Contact Us
-                </a>
+            <section class="customer__page container">
+                <div class="customer__page-brands grid">
+                    <div class="customer__page-brands-block">
+                        <img src="assets/img/healing-solutions.png">
+                    </div>
+                    <div class="customer__page-brands-block">
+                        <img src="assets/img/betone.png">
+                    </div>
+                    <div class="customer__page-brands-block">
+                        <img src="assets/img/bourn.png">
+                    </div>
+                    <div class="customer__page-brands-block">
+                        <img src="assets/img/m&g.png">
+                    </div>
+                    <div class="customer__page-brands-block">
+                        <img src="assets/img/kenjalo.png">
+                    </div>
+                    <div class="customer__page-brands-block">
+                        <img src="assets/img/okinawa.png">
+                    </div>
+                </div>
             </section>
         </main>
         <!--==================== FOOTER ====================-->
