--- a/index.html
+++ b/index.html
@@ -67,12 +67,6 @@
                         <h1 class="home__title">
                             Online Distribution
                         </h1>
-                        <p class="home__description">
-                            We bring products people love to the world & At Rabando, we’re reimagining how to make the world’s most-loved products accessible to everyone.
-                        </p>
-                        <a href="#" class="button--link button--flex">
-                            Explore Rabando <i class="ri-arrow-right-down-line button__icon"></i>
-                        </a>
                     </div>
 
                 </div>
@@ -178,13 +172,13 @@
                     </div>
                 </div>
             </section>
-
+        </main>
         <!--==================== FOOTER ====================-->
         <footer class="footer section">
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <i class="ri-tumblr-fill nav__logo-icon"></i> Thrasio
+                        <img alt="logo" src="assets/img/logo.png" class="footer__logo-img" height="30">
                     </a>
 
                     <h3 class="footer__title">
@@ -218,31 +212,13 @@
                         <li class="footer__information">+999 888 777</li>
                         
                         <div class="footer__social">
-                            <a href="https://www.facebook.com/" class="footer__social-link">
-                                <i class="ri-facebook-fill"></i>
-                            </a>
-                            <a href="https://www.instagram.com/" class="footer__social-link">
-                                <i class="ri-instagram-line"></i>
-                            </a>
-                            <a href="https://twitter.com/" class="footer__social-link">
-                                <i class="ri-twitter-fill"></i>
+                            <a href="https://www.instagram.com/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-instagram-line"></i> <span class="footer__social-text">Instagram</span>
                             </a>
                         </div>
                     </ul>
                 </div>
 
-                <div class="footer__content">
-                    <h3 class="footer__title">
-                        We accept all credit cards
-                    </h3>
-
-                    <div class="footer__cards">
-                        <img src="assets/img/card1.png" alt="" class="footer__card">
-                        <img src="assets/img/card2.png" alt="" class="footer__card">
-                        <img src="assets/img/card3.png" alt="" class="footer__card">
-                        <img src="assets/img/card4.png" alt="" class="footer__card">
-                    </div>
-                </div>
             </div>
 
             <p class="footer__copy">&#169; Rabando. All rigths reserved</p>
