--- a/customer.html
+++ b/customer.html
@@ -30,13 +30,13 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Customer</a>
+                            <a href="customer.html" class="nav__link active-link">Customer</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">Product</a>
                         </li>
                         <li class="nav__item">
-                            <a href="about.html" class="nav__link active-link">Company</a>
+                            <a href="about.html" class="nav__link">Company</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">ID</a>
