--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Customer</a>
+                            <a href="customer.html" class="nav__link">Customer</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">Product</a>
