--- a/customer.html
+++ b/customer.html
@@ -33,7 +33,7 @@
                             <a href="customer.html" class="nav__link active-link">Customer</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Product</a>
+                            <a href="product.html" class="nav__link">Product</a>
                         </li>
                         <li class="nav__item">
                             <a href="about.html" class="nav__link">Company</a>
@@ -59,7 +59,9 @@
         <main class="main pages">
             <section class="main__header-page">
                 <h1 class="section__title">
-                    HOW WE GROW BRANDS
+                    How We Create
+                    Successful
+                    Brands
                 </h1>
                 <div class="section__img-large">
                     <img src="assets/img/customer-rabando.png" height="500">
@@ -67,25 +69,10 @@
             </section>
             <!--==================== ABOUT ====================-->
             <section class="customer__page container">
-                <div class="customer__page-brands grid">
-                    <div class="customer__page-brands-block">
-                        <img src="assets/img/healing-solutions.png">
-                    </div>
-                    <div class="customer__page-brands-block">
-                        <img src="assets/img/betone.png">
-                    </div>
-                    <div class="customer__page-brands-block">
-                        <img src="assets/img/bourn.png">
-                    </div>
-                    <div class="customer__page-brands-block">
-                        <img src="assets/img/m&g.png">
-                    </div>
-                    <div class="customer__page-brands-block">
-                        <img src="assets/img/kenjalo.png">
-                    </div>
-                    <div class="customer__page-brands-block">
-                        <img src="assets/img/okinawa.png">
-                    </div>
+                <div class="customer__page-desc">
+                    <p>We are here to bring the best brands to the right people intelligently and differently through
+                        our proven marketing strategies and vast distribution channels that sets us apart from our
+                        competition</p>
                 </div>
             </section>
         </main>
