--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a href="customer.html" class="nav__link">Customer</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Product</a>
+                            <a href="product.html" class="nav__link">Product</a>
                         </li>
                         <li class="nav__item">
                             <a href="about.html" class="nav__link">Company</a>
@@ -65,7 +65,8 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">
-                            Online Distribution
+                            Building Brands into
+                            Household Names
                         </h1>
                     </div>
 
@@ -80,16 +81,20 @@
                     </div>
                     <div class="about__data">
                         <h2 class="section__title about__title">
-                            The Method to the Magic
+                            Next Level Marketing
                         </h2>
 
                         <p class="about__description">
-                            At Rabando, we’re reimagining how to make the world’s most-loved products accessible to everyone. So we work with successful sellers, using a deep understanding of rankings, ratings, and reviews – plus supply chain and marketing smarts – to transform the art and science of commerce.
+                            Rabando develops brands built
+                            upon what people truly need,
+                            works alongside successful sellers,
+                            and distributes through our self-developed marketing &
+                            distribution channels
                         </p>
 
-                        <a href="#" class="button--link button--flex">
+                        <!-- <a href="#" class="button--link button--flex">
                             See how we work with sellers
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </section>
@@ -102,17 +107,10 @@
                                 <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                                     <img avatar="John Doe" class="testimony__photo">
                                     <div class="testimony__card-description">
-                                        <div class="testimony__card-name">John Doe</div>
-                                        Lorem ipsum dolor consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Ut enim ad minim veniam.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="testimony__container grid swiper-slide">
-                                <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
-                                    <img avatar="Anastasia Crowther" class="testimony__photo">
-                                    <div class="testimony__card-description">
-                                        <div class="testimony__card-name">Anastasia Crowther</div>
-                                        Lorem ipsum dolor consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Ut enim ad minim veniam.
+                                        <div class="testimony__card-name">E D</div>
+                                        Rabando grows our brand into household name without the
+                                        need of conventional expensive marketing and distribution
+                                        system
                                     </div>
                                 </div>
                             </div>
@@ -159,11 +157,11 @@
             <section class="cta section container">
                 <div class="cta__bg">
                     <h1 class="section__title-center">
-                        Let’s Make Something Great
+                        Any Question?
                     </h1>
 
                     <p class="section__description">
-                        If you’re looking to sell your Amazon business, we’re excited to work together.
+                        We're excited to work with you.
                     </p>
                     <div class="cta__block">
                         <a href="#" class="button--layer">
