--- a/product.html
+++ b/product.html
@@ -33,10 +33,10 @@
                             <a href="customer.html" class="nav__link">Customer</a>
                         </li>
                         <li class="nav__item">
-                            <a href="product.html" class="nav__link">Product</a>
+                            <a href="product.html" class="nav__link active-link">Product</a>
                         </li>
                         <li class="nav__item">
-                            <a href="about.html" class="nav__link active-link">Company</a>
+                            <a href="about.html" class="nav__link">Company</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">ID</a>
@@ -57,22 +57,28 @@
         </header>
 
         <main class="main pages">
-            <section class="page__header container">
-                <h1 class="section__title">
-                    About Us
-                </h1>
-
-                <p class="section__description"></p>
-            </section>
-            <!--==================== ABOUT ====================-->
-            <section class="about__page container">
-                <p class="about__page-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas scelerisque bibendum. Etiam a eleifend lectus. Aenean ornare enim sit amet tincidunt sodales. Aliquam sed dolor id massa mollis vestibulum in a diam. Nam interdum felis non odio molestie, et cursus erat venenatis. Donec enim est, ullamcorper et urna aliquam, tempus dapibus est. Integer molestie aliquam erat.
-                    Sed eget massa blandit, efficitur velit non, laoreet nisl. Maecenas non nisi semper, tincidunt sapien non, porttitor lorem. Proin suscipit turpis dolor, quis vulputate augue sollicitudin at. Maecenas sed imperdiet tortor, a auctor velit. Curabitur ultrices arcu in ligula tempus suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non efficitur leo, eget blandit metus. Sed cursus pulvinar tempus.
-                </p>
-                <a href="#" class="button--link button--flex button--block">
-                    Contact Us
-                </a>
+            <!--==================== PRODUCT ====================-->
+            <section class="product__page container">
+                <div class="product__page-brands grid">
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/healing-solutions.png">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/betone.png">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/bourn.png">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/m&g.png">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/kenjalo.png">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/okinawa.png">
+                    </div>
+                </div>
             </section>
         </main>
         <!--==================== FOOTER ====================-->
