--- a/customer.html
+++ b/customer.html
@@ -85,9 +85,12 @@
                     </a>
 
                     <h3 class="footer__title">
-                        Subscribe to our newsletter <br> to stay update
+                        Subscribe to our newsletter to stay update. None of the junk, excellent info.
                     </h3>
+                </div>
 
+                <div class="footer__content">
+                    <h3 class="footer__title">&nbsp;</h3>
                     <div class="footer__subscribe">
                         <input type="email" placeholder="Enter your email" class="footer__input">
 
@@ -99,24 +102,28 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Our Address</h3>
-
-                    <ul class="footer__data">
-                        <li class="footer__information">1234 - Peru</li>
-                        <li class="footer__information">La Libertad - 43210</li>
-                        <li class="footer__information">123-456-789</li>
-                    </ul>
-                </div>
-
-                <div class="footer__content">
                     <h3 class="footer__title">Contact Us</h3>
 
                     <ul class="footer__data">
-                        <li class="footer__information">+999 888 777</li>
 
                         <div class="footer__social">
                             <a href="https://www.instagram.com/rabandogroup/" target="_blank" class="footer__social-link">
-                                <i class="ri-instagram-line"></i> <span class="footer__social-text">Instagram</span>
+                                <i class="ri-instagram-line"></i>
+                            </a>
+                            <a href="https://www.facebook.com/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-facebook-circle-fill"></i>
+                            </a>
+                            <a href="https://www.facebook.com/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-facebook-circle-fill"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/company/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-linkedin-box-fill"></i>
+                            </a>
+                            <a href="#" target="_blank" class="footer__social-link">
+                                <i class="ri-youtube-fill"></i>
+                            </a>
+                            <a href="https://twitter.com/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-twitter-fill"></i>
                             </a>
                         </div>
                     </ul>
@@ -124,7 +131,7 @@
 
             </div>
 
-            <p class="footer__copy">&#169; Rabando. All rigths reserved</p>
+            <p class="footer__copy">Copyright © 2021 Rabando. All rigths reserved</p>
         </footer>
         
         <!--=============== SCROLL UP ===============-->
