--- a/index.html
+++ b/index.html
@@ -105,12 +105,16 @@
                         <div class="swiper-wrapper">
                             <div class="testimony__container grid swiper-slide">
                                 <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
-                                    <img avatar="John Doe" class="testimony__photo">
+                                    <img avatar="E D" class="testimony__photo">
                                     <div class="testimony__card-description">
-                                        <div class="testimony__card-name">E D</div>
                                         Rabando grows our brand into household name without the
                                         need of conventional expensive marketing and distribution
                                         system
+                                        <div class="testimony__card-name">
+                                            <div class="testimony__card-name-detail">
+                                                ED<br>Founder M&G
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -144,7 +148,7 @@
                     </div>
                     <div class="grid-block__item  grid-big-block size-small type-column col-5">
                         <div class="grid-block__item--second-column grid-col col-5-2">
-                            <p style="color: var(--container-color)">86% of our brands sell internationally</p>
+                            <p style="color: var(--title-color)">86% of our brands sell internationally</p>
                         </div>
                         <div class="grid-block__item--first-column grid-col col-5-1">
                             <span style="color: var(--first-color);">86%</span>
@@ -180,9 +184,12 @@
                     </a>
 
                     <h3 class="footer__title">
-                        Subscribe to our newsletter <br> to stay update
+                        Subscribe to our newsletter to stay update. None of the junk, excellent info.
                     </h3>
+                </div>
 
+                <div class="footer__content">
+                    <h3 class="footer__title">&nbsp;</h3>
                     <div class="footer__subscribe">
                         <input type="email" placeholder="Enter your email" class="footer__input">
 
@@ -194,24 +201,28 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Our Address</h3>
-
-                    <ul class="footer__data">
-                        <li class="footer__information">1234 - Peru</li>
-                        <li class="footer__information">La Libertad - 43210</li>
-                        <li class="footer__information">123-456-789</li>
-                    </ul>
-                </div>
-
-                <div class="footer__content">
                     <h3 class="footer__title">Contact Us</h3>
 
                     <ul class="footer__data">
-                        <li class="footer__information">+999 888 777</li>
-                        
+
                         <div class="footer__social">
                             <a href="https://www.instagram.com/rabandogroup/" target="_blank" class="footer__social-link">
-                                <i class="ri-instagram-line"></i> <span class="footer__social-text">Instagram</span>
+                                <i class="ri-instagram-line"></i>
+                            </a>
+                            <a href="https://www.facebook.com/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-facebook-circle-fill"></i>
+                            </a>
+                            <a href="https://www.facebook.com/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-facebook-circle-fill"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/company/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-linkedin-box-fill"></i>
+                            </a>
+                            <a href="#" target="_blank" class="footer__social-link">
+                                <i class="ri-youtube-fill"></i>
+                            </a>
+                            <a href="https://twitter.com/rabandogroup/" target="_blank" class="footer__social-link">
+                                <i class="ri-twitter-fill"></i>
                             </a>
                         </div>
                     </ul>
@@ -219,7 +230,7 @@
 
             </div>
 
-            <p class="footer__copy">&#169; Rabando. All rigths reserved</p>
+            <p class="footer__copy">Copyright © 2021 Rabando. All rigths reserved</p>
         </footer>
         
         <!--=============== SCROLL UP ===============-->
