update pages rabando

--- a/about.html
+++ b/about.html
@@ -57,19 +57,20 @@
         </header>
 
         <main class="main pages">
-            <section class="page__header container">
+            <section class="main__header-page small-version">
                 <h1 class="section__title">
                     About Us
                 </h1>
-
-                <p class="section__description"></p>
             </section>
             <!--==================== ABOUT ====================-->
             <section class="about__page container">
-                <p class="about__page-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas scelerisque bibendum. Etiam a eleifend lectus. Aenean ornare enim sit amet tincidunt sodales. Aliquam sed dolor id massa mollis vestibulum in a diam. Nam interdum felis non odio molestie, et cursus erat venenatis. Donec enim est, ullamcorper et urna aliquam, tempus dapibus est. Integer molestie aliquam erat.
-                    Sed eget massa blandit, efficitur velit non, laoreet nisl. Maecenas non nisi semper, tincidunt sapien non, porttitor lorem. Proin suscipit turpis dolor, quis vulputate augue sollicitudin at. Maecenas sed imperdiet tortor, a auctor velit. Curabitur ultrices arcu in ligula tempus suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non efficitur leo, eget blandit metus. Sed cursus pulvinar tempus.
-                </p>
+                <div class="about__page-desc-first">
+                    <p>Rabando Group is a team of top notch professionals with diverse background who believe that top quality products should become accessible to everyone. With years of experience in building brands, consumer products and e-commerce, we aim to provide joyful product experiences to the world.</p>
+                </div>
+                <div class="about__page-desc">
+                    <p class="about__page-desc-left">We develop brands, strengthen reputation, and distribute products using our tried-and-tested distribution channels that we have established over the years that can provide you with actionable insights on where your business stands today and how to take it forward.</p>
+                    <p class="about__page-desc-right">Established in 2014, Rabando have been distributing countless products to many consumers across the country and more. We work with entrepreneurs to deliver products that benefit not only the consumers but also the society.</p>
+                </div>
                 <a href="#" class="button--link button--flex button--block">
                     Contact Us
                 </a>
@@ -88,7 +89,7 @@
                     </h3>
                 </div>
 
-                <div class="footer__content">
+                <div class="footer__content footer__content-subs">
                     <h3 class="footer__title">&nbsp;</h3>
                     <div class="footer__subscribe">
                         <input type="email" placeholder="Enter your email" class="footer__input">
