--- a/customer.html
+++ b/customer.html
@@ -89,7 +89,7 @@
                     </h3>
                 </div>
 
-                <div class="footer__content">
+                <div class="footer__content footer__content-subs">
                     <h3 class="footer__title">&nbsp;</h3>
                     <div class="footer__subscribe">
                         <input type="email" placeholder="Enter your email" class="footer__input">
