--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
                                 <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                                     <img avatar="E D" class="testimony__photo">
                                     <div class="testimony__card-description">
-                                        Rabando grows our brand into household name without the
-                                        need of conventional expensive marketing and distribution
-                                        system
+                                        <p>
+                                            Rabando grows our brand into household name without the
+                                            need of conventional expensive marketing and distribution
+                                            system
+                                        </p>
                                         <div class="testimony__card-name">
                                             <div class="testimony__card-name-detail">
                                                 ED<br>Founder M&G
@@ -188,7 +190,7 @@
                     </h3>
                 </div>
 
-                <div class="footer__content">
+                <div class="footer__content footer__content-subs">
                     <h3 class="footer__title">&nbsp;</h3>
                     <div class="footer__subscribe">
                         <input type="email" placeholder="Enter your email" class="footer__input">
