--- a/product.html
+++ b/product.html
@@ -59,7 +59,7 @@
         <main class="main pages">
             <!--==================== PRODUCT ====================-->
             <section class="product__page container">
-                <div class="product__page-brands grid">
+                <div class="product__page-brands flex">
                     <div class="product__page-brands-block">
                         <img src="assets/img/healing-solutions.png">
                     </div>
@@ -94,7 +94,7 @@
                     </h3>
                 </div>
 
-                <div class="footer__content">
+                <div class="footer__content footer__content-subs">
                     <h3 class="footer__title">&nbsp;</h3>
                     <div class="footer__subscribe">
                         <input type="email" placeholder="Enter your email" class="footer__input">
