update pages rabando seo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="index.html" class="nav__logo">
-                    <img alt="logo" src="assets/img/logo.png" height="30">
+                    <img alt="logo" src="assets/img/logo.png" height="50" width="196">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -100,29 +100,27 @@
             </section>
 
             <section class="testimony section container" id="testimony">
-
-                    <div class="testimony__bg">
-                        <div class="swiper-wrapper">
-                            <div class="testimony__container grid swiper-slide">
-                                <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
-                                    <img avatar="E D" class="testimony__photo">
-                                    <div class="testimony__card-description">
-                                        <p>
-                                            Rabando grows our brand into household name without the
-                                            need of conventional expensive marketing and distribution
-                                            system
-                                        </p>
-                                        <div class="testimony__card-name">
-                                            <div class="testimony__card-name-detail">
-                                                ED<br>Founder M&G
-                                            </div>
+                <div class="testimony__bg">
+                    <div class="swiper-wrapper">
+                        <div class="testimony__container grid swiper-slide">
+                            <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                                <img avatar="E D" class="testimony__photo" alt="ED">
+                                <div class="testimony__card-description">
+                                    <p>
+                                        Rabando grows our brand into household name without the
+                                        need of conventional expensive marketing and distribution
+                                        system
+                                    </p>
+                                    <div class="testimony__card-name">
+                                        <div class="testimony__card-name-detail">
+                                            ED<br>Founder M&G
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-pagination"></div>
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </section>
 
@@ -162,9 +160,9 @@
             <!--==================== testimony ====================-->
             <section class="cta section container">
                 <div class="cta__bg">
-                    <h1 class="section__title-center">
+                    <h2 class="section__title-center">
                         Any Question?
-                    </h1>
+                    </h2>
 
                     <p class="section__description">
                         We're excited to work with you.
@@ -182,7 +180,7 @@
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <img alt="logo" src="assets/img/logo.png" class="footer__logo-img" height="30">
+                        <img alt="logo" src="assets/img/logo.png" class="footer__logo-img" height="50" width="196">
                     </a>
 
                     <h3 class="footer__title">
@@ -207,7 +205,7 @@
 
                     <ul class="footer__data">
 
-                        <div class="footer__social">
+                        <li class="footer__social">
                             <a href="https://www.instagram.com/rabandogroup/" target="_blank" class="footer__social-link">
                                 <i class="ri-instagram-line"></i>
                             </a>
@@ -223,7 +221,7 @@
                             <a href="https://twitter.com/rabandogroup/" target="_blank" class="footer__social-link">
                                 <i class="ri-twitter-fill"></i>
                             </a>
-                        </div>
+                        </li>
                     </ul>
                 </div>
 
