--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="index.html" class="nav__logo">
-                    <img alt="logo" src="assets/img/logo.png" height="30">
+                    <img alt="logo" src="assets/img/logo.png" height="50" width="196">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -61,22 +61,22 @@
             <section class="product__page container">
                 <div class="product__page-brands flex">
                     <div class="product__page-brands-block">
-                        <img src="assets/img/healing-solutions.png">
+                        <img src="assets/img/healing-solutions.png" alt="healing solutions" width="900" height="900">
                     </div>
                     <div class="product__page-brands-block">
-                        <img src="assets/img/betone.png">
+                        <img src="assets/img/betone.png" alt="betone" width="900" height="900">
                     </div>
                     <div class="product__page-brands-block">
-                        <img src="assets/img/bourn.png">
+                        <img src="assets/img/bourn.png" alt="bourn" width="900" height="900">
                     </div>
                     <div class="product__page-brands-block">
-                        <img src="assets/img/m&g.png">
+                        <img src="assets/img/m&g.png" alt="m&g" width="900" height="900">
                     </div>
                     <div class="product__page-brands-block">
-                        <img src="assets/img/kenjalo.png">
+                        <img src="assets/img/kenjalo.png" alt="kenjalo" width="900" height="900">
                     </div>
                     <div class="product__page-brands-block">
-                        <img src="assets/img/okinawa.png">
+                        <img src="assets/img/okinawa.png" alt="okinawa" width="900" height="900">
                     </div>
                 </div>
             </section>
@@ -86,7 +86,7 @@
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <img alt="logo" src="assets/img/logo.png" class="footer__logo-img" height="30">
+                        <img alt="logo" src="assets/img/logo.png" class="footer__logo-img" height="50" width="196">
                     </a>
 
                     <h3 class="footer__title">
@@ -110,8 +110,7 @@
                     <h3 class="footer__title">Contact Us</h3>
 
                     <ul class="footer__data">
-
-                        <div class="footer__social">
+                        <li class="footer__social">
                             <a href="https://www.instagram.com/rabandogroup/" target="_blank" class="footer__social-link">
                                 <i class="ri-instagram-line"></i>
                             </a>
@@ -127,7 +126,7 @@
                             <a href="https://twitter.com/rabandogroup/" target="_blank" class="footer__social-link">
                                 <i class="ri-twitter-fill"></i>
                             </a>
-                        </div>
+                        </li>
                     </ul>
                 </div>
 
@@ -135,9 +134,9 @@
 
             <p class="footer__copy">Copyright © 2021 Rabando. All rigths reserved</p>
         </footer>
-        
+
         <!--=============== SCROLL UP ===============-->
-        <a href="#" class="scrollup" id="scroll-up"> 
+        <a href="#" class="scrollup" id="scroll-up">
             <i class="ri-arrow-up-fill scrollup__icon"></i>
         </a>
 
@@ -146,7 +145,7 @@
 
         <!--=============== SWIPER ===============-->
         <script src="https://unpkg.com/swiper@7.3.1/swiper-bundle.min.js"></script>
-        
+
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
     </body>
