--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="index.html" class="nav__logo">
-                    <img alt="logo" src="assets/img/logo.png" height="30">
+                    <img alt="logo" src="assets/img/logo.png" height="50" width="196">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -81,7 +81,7 @@
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <img alt="logo" src="assets/img/logo.png" class="footer__logo-img" height="30">
+                        <img alt="logo" src="assets/img/logo.png" class="footer__logo-img" height="50" width="196">
                     </a>
 
                     <h3 class="footer__title">
@@ -105,8 +105,7 @@
                     <h3 class="footer__title">Contact Us</h3>
 
                     <ul class="footer__data">
-
-                        <div class="footer__social">
+                        <li class="footer__social">
                             <a href="https://www.instagram.com/rabandogroup/" target="_blank" class="footer__social-link">
                                 <i class="ri-instagram-line"></i>
                             </a>
@@ -122,7 +121,7 @@
                             <a href="https://twitter.com/rabandogroup/" target="_blank" class="footer__social-link">
                                 <i class="ri-twitter-fill"></i>
                             </a>
-                        </div>
+                        </li>
                     </ul>
                 </div>
 
